# WizzController

./: .gitignore  CHANGELOG.md  README.md  THIRD_PARTY_NOTICES.md  app_meta.py  main.py  pyproject.toml  requirements-build.txt  requirements-dev.txt  requirements.txt
config/: app_runtime_manager.py  base_manager.py  bulbs_manager.py  config_manager.py  controller_settings_manager.py  custom_scenes_manager.py  favorites_manager.py  history_manager.py  hotkeys_manager.py  logs_manager.py  paths.py  presets_manager.py  routines_manager.py  scenes_manager.py  users_manager.py  voice_config_manager.py  voice_manager.py  voice_profile_manager.py  voice_training_manager.py
core/: action_sequence.py  actions.py  discovery.py  event_bus.py  global_hotkeys.py  light_controller.py  light_manager.py  logging_setup.py  single_instance.py  voice_commands.py  voice_controller.py  voice_model_downloader.py  voice_vocab.py  windows_window.py  wiz_capabilities.py  wiz_color.py  wiz_protocol.py  wiz_scenes.py  wiz_scenes_data.py
dev/: dev.py  dev_hot_reload.py  dev_watch.py  mock_bulb.py  toggle_mode.py
docs/: COMMENT_AND_DOCSTRING_STYLE.md  GIT_RELEASE_WORKFLOW.md  HOTKEYS_TRAY_TEST.md  PYWIZLIGHT_065_UPGRADE_REPORT.md  PYWIZLIGHT_INTEGRATION_AUDIT.md  RESPONSIVE_UI_TEST.md  V1_RC_INSTANCE_RECOVERY.md  V1_STABILITY_TEST.md  WINDOWS_BUILD.md
licenses/: THIRD_PARTY_NOTICES.md
localization/: __init__.py  manager.py  ui.py
scripts/: build_windows.ps1  clean_runtime_files.ps1  test_windows_build.ps1  verify_repo.ps1
tests/: test_action_sequence.py  test_app_paths.py  (+32 more)
ui/: app.py  (+15 more)
(+93 files in other folders)
